--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header {
   height: 400px;
   overflow: hidden;
   padding: 0 20px;
-  background: url("images/banner4theartwork.jpg") center / cover no-repeat;
+  background: url("images/banner.jpg") center / cover no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
