--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ header::before {
 }
 
 .projects-grid .project-card:nth-of-type(2) {
-  background-image: url("images/bg4artwork.jpg");
+  background-image: url("images/b4hover.jpg");
 }
 
 .projects-grid .project-card:nth-of-type(3) {
