--- a/style.css
+++ b/style.css
@@ -90,17 +90,18 @@ header::before {
   z-index: 1;
   font-family: "Times New Roman", serif;
   color: #fff;
+  font-weight: normal;
 }
 
 .writing-header h1 {
-  font-size: 56px; /* matches artworks section */
+  font-size: 56px;
   margin: 0;
 }
 
 .writing-header .subhead {
   font-size: 28px;
-  font-weight: 400;
-  margin-top: 10px;
+  margin-top: 8px;
+  opacity: 0.9;
 }
 
 /* ===== About Section ===== */
