--- a/style.css
+++ b/style.css
@@ -69,24 +69,25 @@ header::before {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center; /* change this from flex-start to center */
+  justify-content: center; /* centers text vertically */
   text-align: center;
   color: white;
   position: relative;
-  padding-top: 0; /* remove this */
+  padding-top: 0;
 }
 
-header .banner-text {
-  margin-top: 20px; /* reduce this to move text closer to top */
+.writing-header .banner-text {
+  transform: translateY(-10px); /* scootch text up slightly */
 }
 
-header h1 {
+.writing-header h1 {
   font-family: "Times New Roman", serif;
   font-size: 56px;
   margin: 0;
+  color: white;
 }
 
-header h2 {
+.writing-header h2 {
   font-family: "Times New Roman", serif;
   font-size: 24px;
   color: #f5f5f5;
